test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/static_block_scope_function_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  int
  identifier(foo)
  (
  void
  )
  ;
  return
  identifier(foo)
  (
  )
  ;
  }
  static
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
